# petrosa-socket-client

./: .bandit  .cursorrules  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-config.yaml.backup2  .secrets.baseline  CODECOV_COVERAGE_FIX.md  Dockerfile  LOGGING_FREQUENCY_REDUCTION.md  Makefile  PARALLEL_PROCESSING_IMPLEMENTATION.md  README.md  REFERENCE.md  bandit-report.json  constants.py  coverage.json  otel_init.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-dev.txt.backup2  requirements.txt  ruff.toml
.github/: copilot-instructions.md  skip_flaky_tests.txt
.github/workflows/: ci-checks.yml  deploy.yml  manual-deploy.yml  request-copilot-review.yml
docs/: CIRCUIT_BREAKER_IMPLEMENTATION.md  CI_CD_GAP_FILLER_UPDATE.md  CI_CD_PIPELINE.md  CI_CD_PIPELINE_RESULTS.md  COVERAGE_IMPROVEMENT_TASKS.md  CURSOR_AI_VERSION_RULES.md  CURSOR_COMMANDS.md  CURSOR_RULES_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS_LOGGING_REDUCTION.md  DOCKERHUB_SETUP.md  KUBERNETES_SETUP.md  LOCAL_DEPLOY.md  MAKEFILE.md  MANUAL_DEPLOYMENT_GUIDE.md  NAMESPACE_UPDATE.md  NATS_MESSAGING.md  OPENTELEMETRY_DOUBLE_INITIALIZATION_FIX.md  OPENTELEMETRY_INSTRUMENTATION_UPDATE.md  OPERATIONS_GUIDE.md  OTEL_INSTALLATION_GUIDE.md  PRODUCTION_READINESS.md  PROMPT_TEMPLATE.md  QUICK_REFERENCE.md  REPOSITORY_SETUP_GUIDE.md  SERVICE_SUMMARY.md  SINGLE_REPLICA_ARCHITECTURE.md  STANDARDIZATION_SUMMARY.md  STANDARDIZED_TESTING_GUIDE.md  TESTING.md  TEST_COVERAGE_PLAN.md  TEST_IMPLEMENTATION_GUIDE.md  VERSIONING_GUIDE.md  VERSION_PLACEHOLDER_GUIDE.md
docs/archive/fixes/: OPENTELEMETRY_DOUBLE_INITIALIZATION_FIX.md  OPENTELEMETRY_ENDPOINT_FIX.md
docs/archive/summaries/: DEPLOYMENT_COMPLETE.md  PRODUCTION_SUMMARY.md
k8s/: common-configmap.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  klines-all-timeframes-cronjobs.yaml  klines-gap-filler-cronjob.yaml  klines-mongodb-production.yaml  kubeconfig.yaml.example  network-policy.yaml  service.yaml
quarantine_tests/: test_api_routes_extended.py  test_client_additional_coverage.py  test_comprehensive_additions.py  test_config_manager_comprehensive.py  test_coverage_push_batch3.py  test_coverage_push_batch4.py  test_defensive_checks_extended.py  test_health_server_additional.py  test_message_coverage_boost.py  test_ultra_comprehensive.py  test_websocket_client_comprehensive.py
scripts/: PIPELINE_TEST_RESULTS.md  README.md  add_nats_prefixes.py  auto_context.py  build-multiarch.sh  bump-version.sh  check-test-assertions.py  create-release.sh  cursor_helper.sh  deploy-local.sh  deploy-otel.sh  deploy-production.sh  encode_secrets.py  fix_mongodb_uri.py  fix_yaml_manual.py  monitor_nats.py  pipeline_test_report_1751226205.json  pre-commit-version-check.sh  production_readiness_report_1751226349.json  run_pipeline.py  setup-dev.sh  telemetry_test_script.py  test-local.sh  test_integration.py  test_nats_messaging.py  test_otel_setup.py  test_pipeline_simulation.py  test_production_simulation.py  validate-production.sh  version-manager.sh
socket_client/: __init__.py  heartbeat.py  main.py
socket_client/api/: __init__.py  main.py
socket_client/api/models/: __init__.py  requests.py  responses.py
socket_client/api/routes/: __init__.py  config.py
socket_client/core/: __init__.py  client.py
socket_client/health/: __init__.py  server.py
socket_client/models/: __init__.py  message.py
socket_client/services/: __init__.py  config_manager.py
socket_client/utils/: __init__.py  circuit_breaker.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: test_health_endpoints.py
tests/performance/: test_performance_benchmarks.py
tests/unit/: test_api_config_routes.py  test_api_main_coverage.py  test_api_routes_extended.py  test_batch_additions.py  test_circuit_breaker.py  test_client_additional_coverage.py  test_client_connection_methods.py  test_client_defensive_checks.py  test_client_methods_coverage.py  test_config_manager_comprehensive.py  test_config_manager_simple.py  test_coverage_final_push.py  test_coverage_push_batch2.py  test_coverage_push_batch3.py  test_coverage_push_batch4.py  test_defensive_checks_extended.py  test_health_server.py  test_health_server_additional.py  test_heartbeat.py  test_logger.py  test_logger_coverage.py  test_main_service.py  test_massive_coverage_addition.py  test_message_coverage_boost.py  test_message_models.py  test_models_extended.py  test_simple_coverage_boost.py  test_ultra_comprehensive.py  test_websocket_client.py  test_websocket_client_comprehensive.py
